--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="/src/assets/img/carve_logo_svg.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://upload-widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
     <title>Khắc Kiến Thức - Carve Your Knowledge</title>
   </head>
   <body>
